# Personal-AI-Employee

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.MD  CLAUDE.md  Personal_AI_Employee_Hackathon.md  QWEN.md  README.md  Setup -guide.md  cloud_orchestrator.py  cron_setup.sh  git_sync.sh  main.py  odoo_backup.sh  orchestrator.py  pyproject.toml  watchdog.py
.claude/: settings.json
.claude/hooks/: stop.py
.facebook_session/: cookies.json
.facebook_session/Default/: Cookies  DIPS
.instagram_session/: cookies.json
.instagram_session/Default/: Cookies  DIPS
.qwen/: settings.json
.qwen/hooks/: ralph_wiggum.py
.twitter_session/: cookies.json
.twitter_session/Default/: Cookies  DIPS
AI_Employee_Vault/: Business_Goals.md  CLAUDE.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/Briefings/: 2026-02-26_Briefing.md  2026-02-27_Briefing.md  2026-03-05_Briefing.md  2026-03-09_Briefing.md
AI_Employee_Vault/Done/: APPROVAL_EMAIL_20260224_203013.md  APPROVED_REPLY_whatsapp_roohia_payment_20260224.md  APPROVED_TEST_approval.md  APPROVED_TEST_audit.md  APPROVED_WHATSAPP_invoice_reply_20260227_182043.md  APPROVED_WHATSAPP_reply_20260223_164500.md  APPROVED_WHATSAPP_reply_20260225_053014.md  (+32 more)
mcp_servers/: calendar_mcp.py  email_mcp.py  facebook_mcp.py  instagram_mcp.py  linkedin_mcp.py  odoo_mcp.py  twitter_mcp.py  whatsapp_mcp.py
watchers/: base_watcher.py  config.py  facebook_poster.py  filesystem_watcher.py  gmail_watcher.py  hitl_approval_watcher.py  instagram_poster.py  linkedin_poster.py  plan_creator.py  twitter_poster.py  whatsapp_watcher.py
(+2814 files in other folders)
